# Ferus_Project

./: .gitignore  platformio.ini  readme.md 
UI/: Ferus_Project_UI.sll  Ferus_Project_UI.spj  Ferus_Project_UI_events.py
UI/ExportedFiles/Ferus_Project_UI/Ferus_Project_UI/libraries/: lv_conf.h
UI/ExportedFiles/Ferus_Project_UI/libraries/ui/src/: ui.c  (+5 more)
UI/assets/: ui_font_BoldBigFont.fcfg  ui_font_BoldFont.c  ui_font_BoldFont.fcfg  ui_font_BoldMediumFont.fcfg  ui_font_RegularFont.c  ui_font_RegularFont.fcfg  ui_font_RegularSmallFont.c  ui_font_RegularSmallFont.fcfg
lib/ui/src/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_events.cpp  ui_events.h
lib/ui/src/fonts/: ui_font_BoldMediumFont.c
lib/ui/src/images/: ui_img_add_png.c  ui_img_arrow_forward_png.c  ui_img_arrowback_png.c  ui_img_arrowforward_png.c  ui_img_remove_png.c  ui_img_table_png.c
lib/ui/src/screens/: ui_TouchScreen.c  ui_helloScreen.c  ui_infoScreenTypeFood.c  ui_initScreen.c  ui_selectFoodScreen.c  ui_selectQuantityScreen.c  ui_selectTimestampScreen.c  ui_welcomeScreen.c
src/: elements.py  feeder_settings.cpp  feeder_settings.h  lv_conf.h  main.cpp  motor_functions.cpp  motor_functions.h  screen_config.h  storage_memory.cpp  storage_memory.h  timer_interrupt.cpp  timer_interrupt.h
ui_old/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h
ui_old/src/images/: ui_img_arrow_back_png.c  ui_img_difference_white_png.c  ui_img_ferus_smart_logo_png.c
ui_old/src/screens/: ui_infoScreenTypeFood.c  ui_selectFoodScreen.c  ui_selectQuantityScreen.c  ui_selectTimestampScreen.c
(+14 files in other folders)
